fixed. table 16 done.

--- a/lyx/model.lyx
+++ b/lyx/model.lyx
@@ -6615,7 +6615,7 @@ reference "tab:shutdown-cons-base"
 \begin_inset Formula $z$
 \end_inset
 
- histories, same for people above the 80-th percentile, and finally the
+ histories, same for people above thee 80-th percentile, and finally the
  entire population.
  The values in the table stand for the proportional per period increase
  in consumption that would make individuals indifferent between baseline
